<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendScore</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dashboardTitle">Dashboard</string>
    <string name="editScoreboard">Edit Scoreboard</string>
    <string name="title">Scoreboard Title</string>
    <string name="players">List of Teams</string>
    <string name="titleEditHint">Edit Title</string>
    <string name="teamList">List of Teams</string>
    <string name="addNewTeam">Add New Team</string>
    <string name="removeSelectedTeams">Remove Selected Teams</string>
    <string name="newTeamDialogMessage">Enter Name for Team</string>
    <string name="nameEditHint">Enter Name</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="emptyTeamListItem">No Teams</string>
    <string name="emptyGameListItem">No Scoreboards</string>
    <string name="scoreHeader">Score</string>
    <string name="editTeamContentDescription">Edit Team Name</string>
    <string name="editScoreboardContentDescription">Edit Scoreboard</string>
    <string name="newScoreboard">New Scoreboard</string>
    <string name="createScoreboard">Create Scoreboard</string>
</resources>
