<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
	android:padding="5dp" 
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/title"
        android:layout_toRightOf="@+id/title"
        android:ems="10"
        android:hint="@string/titleEditHint" >
    </EditText>

    <TextView
        android:id="@+id/teamList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/teamList"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/addTeam"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/teamList"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/teamList"
        android:text="@string/addNewTeam"
        android:onClick="onAddTeamClick" />
    
    <ListView
        android:id="@+id/@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/doneEditGameButton"
        android:layout_below="@+id/teamList"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:padding="5dp" >

    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/teamList"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/cancelEditGameButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onCancelEditGameButton"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/doneEditGameButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/cancelEditGameButton"
        android:onClick="onDoneEditGameButton"
        android:text="@string/done" />

    <Button
        android:id="@+id/removeTeam"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/doneEditGameButton"
        android:layout_alignBottom="@+id/doneEditGameButton"
        android:layout_alignLeft="@+id/@android:id/list"
        android:text="@string/removeSelectedTeams" />

</RelativeLayout>